# clang_demo

./: CMakeLists.txt  README.md  demoA  main.c
src/: phreadTest.c  phreadTest.h
